--- a/res/css/style.css
+++ b/res/css/style.css
@@ -30,13 +30,11 @@ nav div {
     align-self: flex-start;
 }
 
-nav div:last-child img {
-    float: right;
-}
 
 nav div img {
     height: 100%;
 }
+
 
 nav div.search-container>input {
     box-sizing: border-box;
@@ -58,6 +56,41 @@ nav div.search-container>button {
     cursor: pointer;
     background-color: #115a98;
 }
+
+.dropbtn {
+
+    border: none;
+    cursor: pointer;
+    height: 30px;
+    float:right;
+  }
+  
+  .dropdown {
+    float: right;
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #ffffff;
+    min-width: 160px;
+    min-height: 70px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    right: 0;
+    top:50px;
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .show {display: block;}
 
 .body-container {
     background-color: #ffffff;
